# django-nx

./: LICENSE  README.md  pyproject.toml
nx/: nx.py
nx/models/: base.py  enums.py  fields.py  querysets.py
nx/restframework/: __init__.py  serializers.py  views.py
nx/utils/: __init__.py  datetime.py
tests/: conftest.py  test_enums.py
