[project]
name = "django-nx"
version = "0.2.3"
description = "Lightweight Django field utilities and extensions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=3.2,<6.1",
    "djangorestframework>=3.12.4,<3.18",
]

[tool.hatch.build.targets.sdist]
include = ["nx"]

[tool.hatch.build.targets.wheel]
include = ["nx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
