[project]
name = "django-nx"
version = "0.3.4"
description = "Lightweight Django field utilities and extensions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyhumps",
    "django>=3.2,<6.1",
    "djangorestframework>=3.12.4,<3.18",
    "shortuuid>=1.0.13,<1.1"
]

[tool.hatch.build.targets.sdist]
include = ["nx"]

[tool.hatch.build.targets.wheel]
include = ["nx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.15",
]
